# hyperglass-agent

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  cli.py  develop.py  hooks.sh  pyproject.toml  setup.cfg
hyperglass_agent/: __init__.py  agent.py  agent_cert.pem  agent_key.pem  config.py  config.yaml  config.yaml.example  console.py  constants.py  example_config.yaml  exceptions.py  execute.py  log.py  payload.py  util.py
hyperglass_agent/api/: __init__.py  web.py
hyperglass_agent/cli/: __init__.py  actions.py  commands.py  echo.py  exceptions.py  static.py
hyperglass_agent/models/: __init__.py  _formatters.py  _utils.py  commands.py  general.py  request.py
hyperglass_agent/nos_utils/: __init__.py  bird.py  frr.py
tests/: test_server.py
