[tool.poetry]
name = "hyperglass-agent"
version = "0.1.4"
description = "The Linux Routing Agent for hyperglass"
authors = ["Matt Love <matt@hyperglass.io>"]
readme = "README.md"
homepage = "https://hyperglass.io"
repository = "https://github.com/checktheroads/hyperglass-agent"
license = "BSD-3-Clause-Clear"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
cryptography = "^2.8"
fastapi = "^0.45.0"
httpx = "^0.11"
loguru = "^0.4.0"
pydantic = "^1.3"
pyjwt = "^1.7.1"
pyyaml = "^5.2"
stackprinter = "^0.2.3"
uvloop = "^0.14.0"
uvicorn = "^0.11.1"
ujson = "^1.35"
inquirer = "^2.6.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
bandit = "^1.6.2"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^20.1.0"
flake8-builtins = "^1.4.2"
flake8-comprehensions = "^3.1.4"
flake8-deprecated = "^1.3"
flake8-eradicate = "^0.2.4"
flake8-if-expr = "^1.0.0"
flake8-isort = "^2.8.0"
flake8-pie = "^0.4.2"
flake8-plugin-utils = "^1.0.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^3.1.4"
flake8-return = "^1.1.1"
pep8-naming = "^0.9.1"
flake8-docstrings = "^1.5.0"
pre-commit = "^1.21.0"
mccabe = "^0.6.1"

[tool.poetry.scripts]
hyperglass-agent = "hyperglass_agent.console:cli"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

